# unicode

./: .clang-format  CMakeLists.txt  Makefile  unicode.pc.in
include/unicode/: unicode.h
source/: unicode.c
tests/: test_unicode.c
